<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>View3DWidget</class>
 <widget class="QWidget" name="View3DWidget">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>612</width>
    <height>320</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <property name="spacing">
    <number>0</number>
   </property>
   <property name="leftMargin">
    <number>0</number>
   </property>
   <property name="topMargin">
    <number>0</number>
   </property>
   <property name="rightMargin">
    <number>0</number>
   </property>
   <property name="bottomMargin">
    <number>0</number>
   </property>
   <item>
    <widget class="QSplitter" name="splitter">
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
     <widget class="QFrame" name="frmLeftPane">
      <property name="frameShape">
       <enum>QFrame::StyledPanel</enum>
      </property>
      <property name="frameShadow">
       <enum>QFrame::Raised</enum>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_3">
       <property name="spacing">
        <number>0</number>
       </property>
       <property name="leftMargin">
        <number>0</number>
       </property>
       <property name="topMargin">
        <number>0</number>
       </property>
       <property name="rightMargin">
        <number>0</number>
       </property>
       <property name="bottomMargin">
        <number>0</number>
       </property>
       <item>
        <widget class="QSplitter" name="splitter_2">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
         </property>
         <widget class="QFrame" name="frmData">
          <property name="frameShape">
           <enum>QFrame::StyledPanel</enum>
          </property>
          <property name="frameShadow">
           <enum>QFrame::Raised</enum>
          </property>
          <layout class="QVBoxLayout" name="verticalLayout_5">
           <property name="spacing">
            <number>0</number>
           </property>
           <property name="leftMargin">
            <number>0</number>
           </property>
           <property name="topMargin">
            <number>0</number>
           </property>
           <property name="rightMargin">
            <number>0</number>
           </property>
           <property name="bottomMargin">
            <number>0</number>
           </property>
           <item>
            <widget class="Viewer3DListWidget" name="listWidget"/>
           </item>
          </layout>
         </widget>
         <widget class="QFrame" name="frmDataViewOptions">
          <property name="frameShape">
           <enum>QFrame::StyledPanel</enum>
          </property>
          <property name="frameShadow">
           <enum>QFrame::Raised</enum>
          </property>
          <layout class="QVBoxLayout" name="verticalLayout_6">
           <property name="spacing">
            <number>0</number>
           </property>
           <property name="leftMargin">
            <number>0</number>
           </property>
           <property name="topMargin">
            <number>0</number>
           </property>
           <property name="rightMargin">
            <number>0</number>
           </property>
           <property name="bottomMargin">
            <number>0</number>
           </property>
          </layout>
         </widget>
        </widget>
       </item>
      </layout>
     </widget>
     <widget class="QFrame" name="frmRightPane">
      <property name="frameShape">
       <enum>QFrame::Box</enum>
      </property>
      <property name="frameShadow">
       <enum>QFrame::Sunken</enum>
      </property>
      <property name="midLineWidth">
       <number>0</number>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout_2">
       <property name="spacing">
        <number>0</number>
       </property>
       <property name="leftMargin">
        <number>0</number>
       </property>
       <property name="topMargin">
        <number>0</number>
       </property>
       <property name="rightMargin">
        <number>0</number>
       </property>
       <property name="bottomMargin">
        <number>0</number>
       </property>
       <item>
        <widget class="QFrame" name="frmViewer">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
         <property name="frameShape">
          <enum>QFrame::StyledPanel</enum>
         </property>
         <property name="frameShadow">
          <enum>QFrame::Raised</enum>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_4">
          <property name="spacing">
           <number>0</number>
          </property>
          <property name="leftMargin">
           <number>0</number>
          </property>
          <property name="topMargin">
           <number>0</number>
          </property>
          <property name="rightMargin">
           <number>0</number>
          </property>
          <property name="bottomMargin">
           <number>0</number>
          </property>
         </layout>
        </widget>
       </item>
       <item>
        <widget class="QFrame" name="frmTools">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
         <property name="frameShape">
          <enum>QFrame::Box</enum>
         </property>
         <property name="frameShadow">
          <enum>QFrame::Raised</enum>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_2">
          <property name="spacing">
           <number>0</number>
          </property>
          <property name="leftMargin">
           <number>0</number>
          </property>
          <property name="topMargin">
           <number>0</number>
          </property>
          <property name="rightMargin">
           <number>0</number>
          </property>
          <property name="bottomMargin">
           <number>0</number>
          </property>
          <item>
           <widget class="QPushButton" name="btnGlobal">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
            </property>
            <property name="toolTip">
             <string>View all</string>
            </property>
            <property name="text">
             <string/>
            </property>
            <property name="icon">
             <iconset resource="../resources.qrc">
              <normaloff>:/icons/v3Dglobal</normaloff>:/icons/v3Dglobal</iconset>
            </property>
            <property name="iconSize">
             <size>
              <width>32</width>
              <height>32</height>
             </size>
            </property>
            <property name="flat">
             <bool>true</bool>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QPushButton" name="btnLookAtXY">
            <property name="toolTip">
             <string>Look at XY plane</string>
            </property>
            <property name="text">
             <string/>
            </property>
            <property name="icon">
             <iconset resource="../resources.qrc">
              <normaloff>:/icons/v3Dxy</normaloff>:/icons/v3Dxy</iconset>
            </property>
            <property name="iconSize">
             <size>
              <width>32</width>
              <height>32</height>
             </size>
            </property>
            <property name="flat">
             <bool>true</bool>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QPushButton" name="btnLookAtXZ">
            <property name="toolTip">
             <string>Look at XZ plane</string>
            </property>
            <property name="text">
             <string/>
            </property>
            <property name="icon">
             <iconset resource="../resources.qrc">
              <normaloff>:/icons/v3Dyz</normaloff>:/icons/v3Dyz</iconset>
            </property>
            <property name="iconSize">
             <size>
              <width>32</width>
              <height>32</height>
             </size>
            </property>
            <property name="flat">
             <bool>true</bool>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QPushButton" name="btnLookAtYZ">
            <property name="toolTip">
             <string>Look at YZ plane</string>
            </property>
            <property name="text">
             <string/>
            </property>
            <property name="icon">
             <iconset resource="../resources.qrc">
              <normaloff>:/icons/v3Dxz</normaloff>:/icons/v3Dxz</iconset>
            </property>
            <property name="iconSize">
             <size>
              <width>32</width>
              <height>32</height>
             </size>
            </property>
            <property name="flat">
             <bool>true</bool>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QPushButton" name="btnVerticalExaggeration">
            <property name="toolTip">
             <string>Vertical scale</string>
            </property>
            <property name="text">
             <string/>
            </property>
            <property name="icon">
             <iconset resource="../resources.qrc">
              <normaloff>:/icons/vertaxag</normaloff>:/icons/vertaxag</iconset>
            </property>
            <property name="iconSize">
             <size>
              <width>32</width>
              <height>32</height>
             </size>
            </property>
            <property name="flat">
             <bool>true</bool>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QPushButton" name="btnFont">
            <property name="toolTip">
             <string>Set text style in the scene.</string>
            </property>
            <property name="text">
             <string/>
            </property>
            <property name="icon">
             <iconset resource="../resources.qrc">
              <normaloff>:/icons32/ v3Dfont32</normaloff>:/icons32/ v3Dfont32</iconset>
            </property>
            <property name="iconSize">
             <size>
              <width>32</width>
              <height>32</height>
             </size>
            </property>
            <property name="flat">
             <bool>true</bool>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QPushButton" name="btnRuler">
            <property name="toolTip">
             <string>Toggle distance measurement tool.</string>
            </property>
            <property name="text">
             <string/>
            </property>
            <property name="icon">
             <iconset resource="../resources.qrc">
              <normaloff>:/icons32/v3Druler</normaloff>:/icons32/v3Druler</iconset>
            </property>
            <property name="iconSize">
             <size>
              <width>32</width>
              <height>32</height>
             </size>
            </property>
            <property name="flat">
             <bool>true</bool>
            </property>
           </widget>
          </item>
          <item>
           <spacer name="verticalSpacer">
            <property name="orientation">
             <enum>Qt::Vertical</enum>
            </property>
            <property name="sizeHint" stdset="0">
             <size>
              <width>20</width>
              <height>40</height>
             </size>
            </property>
           </spacer>
          </item>
         </layout>
        </widget>
       </item>
      </layout>
     </widget>
    </widget>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>Viewer3DListWidget</class>
   <extends>QListWidget</extends>
   <header>viewer3d/viewer3dlistwidget.h</header>
  </customwidget>
 </customwidgets>
 <resources>
  <include location="../resources.qrc"/>
 </resources>
 <connections>
  <connection>
   <sender>btnGlobal</sender>
   <signal>clicked()</signal>
   <receiver>View3DWidget</receiver>
   <slot>onViewAll()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>590</x>
     <y>18</y>
    </hint>
    <hint type="destinationlabel">
     <x>305</x>
     <y>159</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>btnLookAtXY</sender>
   <signal>clicked()</signal>
   <receiver>View3DWidget</receiver>
   <slot>onLookAtXY()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>582</x>
     <y>71</y>
    </hint>
    <hint type="destinationlabel">
     <x>305</x>
     <y>159</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>btnLookAtXZ</sender>
   <signal>clicked()</signal>
   <receiver>View3DWidget</receiver>
   <slot>onLookAtXZ()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>607</x>
     <y>114</y>
    </hint>
    <hint type="destinationlabel">
     <x>305</x>
     <y>159</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>btnLookAtYZ</sender>
   <signal>clicked()</signal>
   <receiver>View3DWidget</receiver>
   <slot>onLookAtYZ()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>607</x>
     <y>151</y>
    </hint>
    <hint type="destinationlabel">
     <x>305</x>
     <y>159</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>listWidget</sender>
   <signal>itemClicked(QListWidgetItem*)</signal>
   <receiver>View3DWidget</receiver>
   <slot>onObjectsListItemActivated(QListWidgetItem*)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>254</x>
     <y>136</y>
    </hint>
    <hint type="destinationlabel">
     <x>305</x>
     <y>159</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>btnVerticalExaggeration</sender>
   <signal>clicked()</signal>
   <receiver>View3DWidget</receiver>
   <slot>onVerticalExaggeration()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>590</x>
     <y>185</y>
    </hint>
    <hint type="destinationlabel">
     <x>614</x>
     <y>234</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>btnFont</sender>
   <signal>clicked()</signal>
   <receiver>View3DWidget</receiver>
   <slot>onTextStyle()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>580</x>
     <y>214</y>
    </hint>
    <hint type="destinationlabel">
     <x>612</x>
     <y>261</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>btnRuler</sender>
   <signal>clicked()</signal>
   <receiver>View3DWidget</receiver>
   <slot>onRuler()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>571</x>
     <y>238</y>
    </hint>
    <hint type="destinationlabel">
     <x>612</x>
     <y>298</y>
    </hint>
   </hints>
  </connection>
 </connections>
 <slots>
  <slot>onViewAll()</slot>
  <slot>onLookAtXY()</slot>
  <slot>onLookAtXZ()</slot>
  <slot>onLookAtYZ()</slot>
  <slot>onObjectsListItemActivated(QListWidgetItem*)</slot>
  <slot>onVerticalExaggeration()</slot>
  <slot>onTextStyle()</slot>
  <slot>onRuler()</slot>
 </slots>
</ui>
